--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="info-carro">
 					<h2>Volkswagen Karmann-ghia</h2>
 					<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-					<a href="">Mais detalhes</a>
+					<a href="" class="btn1">Mais detalhes</a>
 				</div>
 			</div>
 			<div class="vitrine-destaque">
@@ -87,7 +87,7 @@
 				<div class="info-carro">
 					<h2>Volkswagen Karmann-ghia</h2>
 					<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-					<a href="">Mais detalhes</a>
+					<a href="" class="btn1">Mais detalhes</a>
 				</div>
 			</div>
 
@@ -99,11 +99,43 @@
 				<div class="info-carro">
 					<h2>Volkswagen Karmann-ghia</h2>
 					<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-					<a href="">Mais detalhes</a>
+					<a class="btn1" href="">Mais detalhes</a>
 				</div>
 			</div>
 			<div class="clear"></div>
 		</div>
+	</section>
+
+	<section class="servicos-descricao">
+		<div class="half1">
+			<div class="half1-wraper">
+				<h2>Serviços</h2>
+				<ul>
+					<li>Compra</li>
+					<li>Venda</li>
+					<li>Consultoria de veículos</li>
+					<li>Indicação de Mecânico e peças</li>
+				</ul>
+				<a href="" class="btn1">Saiba mais</a>
+			</div>
+		</div>
+		<div class="half2">
+			<h2>Depoimentos</h2>
+			<div class="depoimentos-single">
+				<p>"O Rafael foi muito atencioso, me buscou no aeroporto e garantiu
+					toda a comodidade e conforto no almoço, no transfer, na visita ao veículo e durante o 
+					text-drive"
+				</p>
+				<div class="navigation">
+					<div class="arrows">
+						<img src="imagens/arrow-left.png">
+						<img src="imagens/arrow-right.png">
+					</div>
+					<div class="nome-depoimento">João da silva</div>
+				</div>
+			</div>
+		</div>
+		<div class="clear"></div>
 	</section>
 </body>
 
