--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link rel="shortcut icon" type="image-x/png" href="imagens/icone.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -26,17 +27,17 @@
 
 		<nav class="desktop">
 			<ul>
-				<li><a style="color: #eb2d2d;" href="">Home</a></li>
-				<li><a href="">Sobre</a></li>
-				<li><a href="">Venda</a></li>
+				<li><a style="color: #eb2d2d;" href="index.html">Home</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
+				<li><a href="venda.html">Venda</a></li>
 				<li><a href="">Contato</a></li>
 			</ul>
 		</nav>
 		<nav class="mobile">
 			<ul>
-				<li><a style="color: #eb2d2d;" href="">Home</a></li>
-				<li><a href="">Sobre</a></li>
-				<li><a href="">Venda</a></li>
+				<li><a style="color: #eb2d2d;" href="index.html">Home</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
+				<li><a href="venda.html">Venda</a></li>
 				<li><a href="">Contato</a></li>
 			</ul>
 		</nav>
@@ -137,6 +138,50 @@
 		</div>
 		<div class="clear"></div>
 	</section>
+	<section class="contato">
+			<div class="line-titulo">
+				<div class="ln1"></div>
+				<h2>Contato</h2>
+			</div>
+
+			<form>
+				<div class="input-wraper w100">
+					<input type="text" placeholder="Nome" required>
+				</div>
+
+				<div class="input-wraper w50">
+					<input type="text" placeholder="E-mail" required>
+				</div>
+				
+				<div class="input-wraper w50">
+					<input type="text" placeholder="Telefone" required>
+				</div>
+
+				<div class="input-wraper w100">
+					<textarea placeholder="Mensagem"></textarea>
+				</div>
+
+				<div class="input-wraper w100">
+					<input class="btn1" type="submit" value="Enviar" name="acao">
+				</div>
+				<div class="clear"></div>
+			</form>
+	</section>
+
+	<footer>
+		<div class="container">
+			<nav>
+				<ul>
+					<li><a style="color: #eb2d2d;" href="index.html">Home</a></li>
+					<li><a href="sobre.html">Sobre</a></li>
+					<li><a href="venda.html">Venda</a></li>
+					<li><a href="">Contato</a></li>
+				</ul>
+			</nav>
+			<p>Todos os direitos reservados</p>
+			<div class="clear"></div>
+		</div>
+	</footer>
 </body>
 
 </html>
